syntax = "proto3";

package CareerCloud.gRPC.Services;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/Common.proto";

option csharp_namespace = "CareerCloud.gRPC.Services";

service SecurityLoginsLogProvider {
	rpc GetSecurityLoginsLogs (google.protobuf.Empty) returns (SecurityLoginsLogList);
	rpc GetSecurityLoginsLog (CareerCloud.gRPC.Common.IdRequest) returns (SecurityLoginsLogProto);
	rpc PostSecurityLoginsLog (SecurityLoginsLogList) returns (CareerCloud.gRPC.Common.BoolReply);
	rpc PutSecurityLoginsLog (SecurityLoginsLogList) returns (CareerCloud.gRPC.Common.BoolReply);
	rpc DeleteSecurityLoginsLog (SecurityLoginsLogList) returns (CareerCloud.gRPC.Common.BoolReply);
}

message SecurityLoginsLogProto {
    string id =1;
    string login =2;
    string source_ip =3;
    google.protobuf.Timestamp logon_date =4;
    bool is_succesful =5;
}

message SecurityLoginsLogList {
    repeated SecurityLoginsLogProto security_logins_logs = 1; 
}
